# tiny-computer-graphics

./: .gitignore  Cargo.toml  LICENSE  README.md  display.html
examples/: first.rs  monte_carlo_diffuse.rs  random_ball.rs  single_ball.rs
output/: head_with_texture.tga
src/: lib.rs  main.rs
src/raytracer/: basics.rs  camera.rs  mod.rs  render.rs
src/raytracer/world/: camera.rs  mod.rs  ray.rs  scene.rs
src/raytracer/world/background/: mod.rs
src/raytracer/world/objects/: box_3d.rs  light.rs  material.rs  mod.rs  sphere.rs  torus.rs
src/raytracer/world/scene/: mod.rs  ray_cast.rs
src/rotating_box/: mod.rs
src/tiny_ray_tracer/: mod.rs  step_01_draw_scene.rs  step_04_lighting.rs  step_05_specular_lighting.rs
src/tiny_raytracer/: mod.rs  step_02_one_sphere.rs  step_03_spheres.rs  step_05_specular_lighting.rs  step_06_shadows.rs  step_07_reflection.rs  step_08_refraction.rs
src/tiny_render/: lesson_00_getting_started.rs  lesson_01_line_drawing_algorithm.rs  lesson_02_draw_triangle.rs  lesson_03_apply_texture.rs  lesson_03_remove_hidden_faces.rs  mod.rs
