[package]
name = "tiny-computer-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
approx = "0.5.1"
image = "0.25.5"
imageproc = "0.25.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
nalgebra = "0.33.2"
rand = "0.9.0"
rayon = "1.10.0"

[lib]
path = "src/lib.rs"
name = "tiny_computer_graphics"
